# exifdatefix

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-package.yml
ImageDateAdjuster/: ImageDateHandler.py  main.py
exifdatefix/: cli.py  core.py
filename2exifdate/: filename2exifdate.py  imagedatehandler.py
src/filename2exifdate/: filename2exifdate.py
tests/: generate_sample_images.py  test_core.py
